wip: docs: autogenerate Swagger specs
